# tyd-python

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: pytest.yml  pythonpackage.yml
tests/: conftest.py  test_tyd_nodes.py
tests/files/: testcase_001.tyd  testcase_002.tyd  testcase_003.tyd
tyd/: __init__.py  constants.py  inheritance.py  tyd_file.py  tyd_from_text.py  tyd_to_text.py
tyd/nodes/: __init__.py  tyd_collection.py  tyd_document.py  tyd_list.py  tyd_node.py  tyd_string.py  tyd_table.py
tyd/utils/: __init__.py  utils.py
