[tool.poetry]
name = "tyd"
version = "0.1.0"
description = ""
authors = ["Lazialize <lazialize@mist.conoha.io>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.7.9"
pytest-cov = "^2.8.1"
docutils = "^0.16"
doc8 = "^0.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
